--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
-index.html
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/" />
     <title>Оборот Событий</title>
   </head>
   <body>
